objects/Order.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubmittedToOmDate__c</fullName>
        <description>Date of Successful Submission to Order Management</description>
        <inlineHelpText>Date of Successful Submission to Order Management</inlineHelpText>
        <label>Submitted to OM Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupersededOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Superseded Order</description>
        <label>Superseded Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Superseding Order</relationshipLabel>
        <relationshipName>SupersededOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupplementalAction__c</fullName>
        <description>If this is a supplemental order, this field represents the type of action that is requested on the superseded order.</description>
        <label>Supplemental Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Follow On</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                    <isActive>false</isActive>
                    <label>Original</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ThorJeopardyStatus__c</fullName>
        <label>Jeopardy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalMonthlyDiscount__c</fullName>
        <label>Total : Monthly Discount</label>
        <summarizedField>OrderItem.vlocity_cmt__RecurringDiscountPrice__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalOneTimeDiscount__c</fullName>
        <label>Total : One Time Discount</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeDiscountPrice__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMarginTotal__c</fullName>
        <description>Usage Margin Total</description>
        <label>Usage Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date of last validation run</description>
        <inlineHelpText>Date of last validation run</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from last validation run</description>
        <inlineHelpText>Message from last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Status of last validation run</description>
        <inlineHelpText>Status of last validation run</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__EnterpriseOrder</fullName>
        <active>true</active>
        <description>Use enterprise order for large multi-site or multi-subscriber orders when you want one single large order.</description>
        <label>Enterprise Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__GroupCart</fullName>
        <active>true</active>
        <description>A group cart holds the configured offers designed to be applied to all of the members of the associated group.</description>
        <label>Group Cart</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MasterOrder</fullName>
        <active>true</active>
        <description>Use master order for large multi-service point, multi-site or multi-subscriber orders when you need to break the large order into a collection of sub-orders.</description>
        <label>Master Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneOrder</fullName>
        <active>true</active>
        <label>MobilePhoneOrder</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__StandardOrder</fullName>
        <active>true</active>
        <description>Use a standard order for consumer and small to medium-sized business orders when the number of line items is not large (~200 or less).</description>
        <label>Standard Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__SubOrder</fullName>
        <active>true</active>
        <description>A sub-order is an order that is part of a large master order. Each sub-order is often targeted to a single service point, site or subscriber.</description>
        <label>Sub Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__WorkingCart</fullName>
        <active>true</active>
        <description>A working cart is a temporary cart used by CPQ processes to calculate validity and pricing for a subset of line items from a large order.</description>
        <label>Working Cart</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>